# ghostty-animation-command

./: Cargo.toml  README.md
src/: animation.rs  main.rs
