[package]
name = "ghostty_animation"
version = "0.1.0"
edition = "2021"

[dependencies]
alternate_screen_wrapper = { version = "0.3.2", features = ["unix"] }
rustix = { version = "1.0.8", default-features = false, features = [
    "termios",
    "std",
] }

[profile.release]
lto = true
codegen-units = 1
